<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/WelcomeNote"
        android:layout_width="280dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:text="Welcome to Code Your Way "
        android:textColor="#009688"
        android:textSize="20dp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="384dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/email"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/text_username"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="2dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textFirstName"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginRight="8dp"
            android:background="@android:drawable/editbox_background"
            android:drawableLeft="@drawable/username"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:paddingLeft="2dp" />

        <EditText
            android:id="@+id/textLastName"
            android:layout_width="125dp"
            android:layout_height="42dp"
            android:background="@android:drawable/editbox_background"
            android:drawableLeft="@drawable/username"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:paddingLeft="2dp" />
    </LinearLayout>

    <Spinner
        android:id="@+id/textExpertise"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/expertise"
        android:hint="Expertise"
        android:inputType="textPersonName"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/text_cnf_password"
        android:layout_width="260dp"
        android:layout_height="42dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="20dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"
        android:inputType="textWebPassword"
        android:paddingLeft="2dp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="#fff" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="18dp"
            android:text="@string/already_registered"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#009688" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textSize="18dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="#FF9800"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>