...
    <string name="day_night_mode">Day/Night Mode</string>
    <string name="sounds">Sounds</string>
    <string name="email_address">Email Address</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already_registered ?</string>
    <string name="login">Login</string>
    <string name="user_profile">User Profile</string>
    <string name="register_now">Register Now</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="lastname">lastName</string>
    <string name="firstName">First Name</string>
    <string name="elementary_programming">Elementary Programming</string>
    <string name="selections">Selections</string>
    <string name="facts_of_the_day">Facts of the Day</string>
...
