...
            android:layout_height="35dp"
            android:textColor="#fff"
            android:text="@string/not_registered"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textColor="#009688"
            android:text="@string/register_now"
            android:textAppearance="@style/TextAppearance.AppCompat" />
...
